--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-addons-shallow-compare": "^15.6.0",
     "react-dates": "12.7.0",
     "react-dom": "^17.0.1",
+    "react-firebaseui": "^5.0.2",
     "react-modal": "^2.2.2",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
