--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "extract-text-webpack-plugin": "3.0.0",
     "firebase": "^8.1.2",
     "heroku": "^7.52.0",
+    "heroku-ssl-redirect": "^0.1.1",
     "history": "4.7.2",
     "moment": "^2.18.1",
     "node-sass": "^4.14.1",
