--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dates": "12.7.0",
     "react-dom": "^17.0.1",
     "react-firebaseui": "^5.0.2",
+    "react-iframe": "^1.8.0",
     "react-modal": "^2.2.2",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
