--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@material-ui/core": "^4.11.4",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
@@ -42,6 +43,7 @@
     "react-addons-shallow-compare": "^15.6.0",
     "react-dates": "12.7.0",
     "react-dom": "^17.0.1",
+    "react-easy-crop": "^3.5.1",
     "react-firebaseui": "^5.0.2",
     "react-iframe": "^1.8.0",
     "react-modal": "^2.2.2",
