--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "start": "node server/server.js",
+    "start": "nodemon server/server.js",
     "heroku-postbuild": "yarn run build:prod"
   },
   "author": "Taichi Ishiguro",
@@ -28,6 +28,7 @@
     "babel-preset-react": "6.24.1",
     "css-loader": "^0.28.4",
     "enzyme-adapter-react-16": "^1.0.0",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "3.0.0",
     "firebase": "^8.1.2",
@@ -65,6 +66,7 @@
     "enzyme": "^3.0.0",
     "enzyme-to-json": "^3.0.1",
     "jest": "^20.0.4",
+    "nodemon": "^2.0.12",
     "react-test-renderer": "^16.0.0",
     "webpack-dev-server": "^2.5.1"
   },
