--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "start": "nodemon server/server.js",
+    "start": "node server/server.js",
     "heroku-postbuild": "yarn run build:prod"
   },
   "author": "Taichi Ishiguro",
