--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
   "main": "index.js",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "firebase-admin": "^9.8.0",
     "firebase-functions": "^3.14.1",
     "nodemailer": "^6.6.3"
